--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <script src="index-javascript.js"></script>
 </head>
 <body>
+/*HEADER FILES*/
 <section>
 <div class="header" id="myHeader">
       <h1><b>Healthy Food</b></h1>
     </div>
-
 </section>
-
+      
+      
+/*CHOICE MENU*/
+<section id="choicemenu">
+      <h2 class="title-text">*What would you like to have*</h2>
+        <a  href="#"><img id="choice" src="GulabJamun.jpg" height="260px" width="260px"></img></a>
+      <a  href="#"><img  id="choice"src="KadaiPaneer.jpg" height="260px" width="260px"></img></a>
+      <a href="#"><img id="choice" src="Egg.jpg" height="260px" width="260px"></img></a>
+</section>
 </body>
