--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 <link rel = "stylesheet" href = "index-style.css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 <!--HEADER FILES-->
@@ -21,6 +22,23 @@
 </section>
 
 
+<!--Horizonatal NavBar-->
+<section>
+  <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+      <a href="javascript:void(0);" class="icon" onclick="topnav()"><i class="fa fa-bars"></i></a>
+  </div>
+</section>
+
+
+<!--Main Menu -->
+<section>
+      
+</section>
+
 
 
 
@@ -33,16 +51,26 @@
 
 <!--JavaScript-->
 <script>
-window.onscroll = function() {myFunction()};
+/*header sticky fuction*/
+window.onscroll = function() {header()};
 
 var header = document.getElementById("myHeader");
 var sticky = header.offsetTop;
 
-function myFunction() {
+function header() {
   if (window.pageYOffset > sticky) {
     header.classList.add("sticky");
   } else {
     header.classList.remove("sticky");
+  }
+}
+/*topnav bar*/      
+ function topnav() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
   }
 }
 </script>
