--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 <!--JavaScript-->
 <script>
 /*header sticky fuction*/
-window.onscroll = function() {header()};
+window.onscroll = function() {header1()};
 
 var header = document.getElementById("myHeader");
 var sticky = header.offsetTop;
 
-function header() {
+function header1() {
   if (window.pageYOffset > sticky) {
     header.classList.add("sticky");
   } else {
