--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <!--Horizonatal NavBar-->
 <section>
   <div class="topnav" id="myTopnav">
-      <a href="javascript:void(0);" class="icon" onclick="topnav()"><i class="fa fa-bars"></i></a>
+      <!--<a href="javascript:void(0);" class="icon" onclick="topnav()"><i class="fa fa-bars"></i></a>-->
       
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
@@ -66,7 +66,7 @@ function header1() {
     header.classList.remove("sticky");
   }
 }
-/*topnav bar*/      
+/*topnav bar      
  function topnav() {
   var x = document.getElementById("myTopnav");
   if (x.className === "topnav") {
@@ -74,7 +74,7 @@ function header1() {
   } else {
     x.className = "topnav";
   }
-}
+}*/
 </script>
 </body>
 </html>
