--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       
       
 <!--CHOICE MENU-->
-<section id="choicemenu">
+<section class="choicemenu">
       <h2 class="title-text">*What would you like to have*</h2>
-        <a  href="#"><img id="choice" src="GulabJamun.jpg" ></img></a>
-      <a  href="#"><img  id="choice"src="KadaiPaneer.jpg" height="260px" width="260px"></img></a>
-      <a href="#"><img id="choice" src="Egg.jpg" height="260px" width="260px"></img></a>
+        <a  href="#"><img class="choice" src="GulabJamun.jpg" ></img></a>
+      <a  href="#"><img  class="choice"src="KadaiPaneer.jpg" ></img></a>
+      <a href="#"><img class="choice" src="Egg.jpg"></img></a>
 </section>
 
 
