--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <!--CHOICE MENU-->
 <section class="choicemenu">
       <h2 class="title-text">*What would you like to have*</h2>
-        <a  href="#"><img class="responsive" src="GulabJamun.jpg" height="260px" width="260px" ></img></a>
-        <a  href="#"><img  class="responsive"src="KadaiPaneer.jpg" height="260px" width="260px"></img></a>
-        <a href="#"><img class="responsive" src="Egg.jpg" height="260px" width="260px"></img></a>
+        <a  href="#"><img class="responsive" id="choice" src="GulabJamun.jpg" height="260px" width="260px" ></img></a>
+        <a  href="#"><img  class="responsive" id="choice" src="KadaiPaneer.jpg" height="260px" width="260px"></img></a>
+        <a href="#"><img class="responsive" id="choice" src="Egg.jpg" height="260px" width="260px"></img></a>
 </section>
 
 
