--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
 <link rel = "stylesheet" href = "index-style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -27,11 +26,11 @@
 <!--Horizonatal NavBar-->
 <div>
   <div class="topnav" id="myTopnav">
-      <a href="#news">News</a>
+    
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
       <a href="#home" class="active">Home</a>
-     <button class="w3-button w3-teal w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
+     <button class="w3-button  w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
 </div>
  <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:200px; " id="mySidebar">
