--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      <button class="w3-button  w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
 </div>
- <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:200px; " id="mySidebar">
+ <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left"  id="mySidebar">
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
