--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!--Horizonatal NavBar-->
 <div>
-  <div class="topnav" id="myTopnav">
+  <div class="topnav sticky" id="myTopnav">
     
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
