--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!--Horizonatal NavBar-->
 </section>
 <div>
-  <div class="topnav" id="myTopnav" style=" position: -webkit-sticky; position:sticky; top: 0;">
+  <div class="topnav" id="myTopnav" >
     
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
