--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <!--JavaScript-->
 <script>
 /*header sticky fuction*/
-window.onscroll = function() {header1()};
+/*window.onscroll = function() {header1()};
 
 var header = document.getElementById("myHeader");
 var sticky = header.offsetTop;
@@ -203,7 +203,7 @@ function header1() {
   } else {
     header.classList.remove("sticky");
   }
-}
+}*/
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
 }
