--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <div class="header" id="myHeader">
       <h1><b>Healthy Food</b></h1>
     </div>
-
+      </section>
       
       
 <!--CHOICE MENU-->
- 
+ <section>
 <div class="choicemenu">
       <h2 class="title-text">*What would you like to have*</h2>
         <a  href="#"><img class="responsive" id="choice" src="GulabJamun.jpg" height="260px" width="260px" ></img></a>
@@ -35,6 +35,7 @@
      <button class="w3-button  w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
 </div>
+<section>
  <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="height:100%; margin 100px; " id="mySidebar">
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
