--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@ var sticky = nav.offsetTop;
 
 function navbar() {
   if (window.pageYOffset > sticky) {
-    header.classList.add("sticky");
+    nav.classList.add("sticky");
   } else {
-    header.classList.remove("sticky");
+    nav.classList.remove("sticky");
   }
 }
 function w3_open() {
