--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
 </div>
 <section>
  <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style=" top:500px;" id="mySidebar">
+       <div id="inner">
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
-</div>
+       </div></div>
 
 
 <!--Main Menu -->
@@ -205,6 +206,10 @@ function header1() {
   } else {
     header.classList.remove("sticky");
   }
+}
+window.onscroll = function() {inner()};
+function inner() {
+  document.getElementById("inner").style.top = "80px";
 }
 window.onscroll = function() {navbar()};
 
