--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 <section>
  <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style=" top:500px;" id="mySidebar">
-       <div id="inner">
+       <div id="inner" style=" top:500px;">
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
