--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@ window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
   if (document.body.scrollTop > 450 || document.documentElement.scrollTop > 450) {
-    document.getElementById("inner").style.top = "80px";
+    document.getElementById("mySidebar").w3-sidebar.style.top = "80px";
   } else {
-    document.getElementById("inner").style.top = "500px";
+    document.getElementById("mySidebar").w3-sidebar.style.top = "500px";
   }
 }
 window.onscroll = function() {navbar()};
