--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 </div>
 <section>
  <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style=" top:500px;" id="mySidebar">
-       <div id="inner" style=" top:500px;">
+       
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
   <a href="#" class="w3-bar-item w3-button">Link 1</a>
   <a href="#" class="w3-bar-item w3-button">Link 2</a>
   <a href="#" class="w3-bar-item w3-button">Link 3</a>
-       </div></div>
+       </div>
 
 
 <!--Main Menu -->
@@ -201,21 +201,13 @@ var header = document.getElementById("myHeader");
 var sticky = header.offsetTop;
 
 function header1() {
-  if (window.pageYOffset > sticky) {
-    header.classList.add("sticky");
+  if (window.pageYOffset > sticky1) {
+    header.classList.add("sticky1");
   } else {
-    header.classList.remove("sticky");
+    header.classList.remove("sticky1");
   }
 }
-window.onscroll = function() {scrollFunction()};
-
-function scrollFunction() {
-  if (document.body.scrollTop > 450 || document.documentElement.scrollTop > 450) {
-    document.getElementById("mySidebar").w3-sidebar.style.top = "80px";
-  } else {
-    document.getElementById("mySidebar").w3-sidebar.style.top = "500px";
-  }
-}
+/*navbar sticky fuction*/
 window.onscroll = function() {navbar()};
 
 var nav = document.getElementById("myTopnav");
@@ -228,6 +220,7 @@ function navbar() {
     nav.classList.remove("sticky");
   }
 }
+/*sidebar open/close  fuction*/
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
 }
