--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@ function header1() {
     header.classList.remove("sticky1");
   }
 }
+      </script>
+      <script>
 /*navbar sticky fuction*/
 window.onscroll = function() {navbar()};
 
@@ -220,6 +222,8 @@ function navbar() {
     nav.classList.remove("sticky");
   }
 }
+            </script>
+<script>
 /*sidebar open/close  fuction*/
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
@@ -228,8 +232,10 @@ function w3_open() {
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
 }
+</script>
+<script>
 // When the user scrolls down 500px from the top of the document, resize the sidebar top size
-/*window.onscroll = function() {scrollFunction()};
+window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
   if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
@@ -237,7 +243,7 @@ function scrollFunction() {
   } else {
     document.getElementById("mySidebar").style.top = "500px";
   }
-}*/
+}
 
 </script>
 </body>
