--- a/index.html
+++ b/index.html
@@ -195,18 +195,18 @@
 <!--JavaScript-->
 <script>
 /*header sticky fuction*/
-window.onscroll = function() {header1()};
+window.onscroll = function() {header()};
 
 var header = document.getElementById("myHeader");
 var sticky = header.offsetTop;
 
-function header1() {
-  if (window.pageYOffset > sticky1) {
-    header.classList.add("sticky1");
+function header() {
+  if (window.pageYOffset > sticky) {
+    header.classList.add("sticky");
   } else {
-    header.classList.remove("sticky1");
+    header.classList.remove("sticky");
   }
-},
+}
       
 /*navbar sticky fuction*/
 window.onscroll = function() {navbar()};
@@ -220,7 +220,7 @@ function navbar() {
   } else {
     nav.classList.remove("sticky");
   }
-},
+}
     
 /*sidebar open/close  fuction*/
 function w3_open() {
@@ -229,7 +229,7 @@ function w3_open() {
 
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
-},
+}
 
 // When the user scrolls down 500px from the top of the document, resize the sidebar top size
 window.onscroll = function() {scrollFunction()};
