--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ function w3_close() {
 }
 
 // When the user scrolls down 500px from the top of the document, resize the sidebar top size
-window.onscroll = function() {scrollFunction()};
+/*window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
   if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
@@ -244,7 +244,7 @@ function scrollFunction() {
   } else {
     document.getElementById("mySidebar").style.top = "500px";
   }
-}
+}*/
 
 </script>
 </body>
