--- a/index.html
+++ b/index.html
@@ -226,17 +226,17 @@ function navbar() {
   }
 };
     
-/*sidebar open/close  fuction*/
+/*sidebar open/close  fuction*//*
 function w3_open() {
   document.getElementById("mySidebar").style.display = "block";
 }
 
 function w3_close() {
   document.getElementById("mySidebar").style.display = "none";
-}
+}*/
 
 // When the user scrolls down 500px from the top of the document, resize the sidebar top size
-/*window.onscroll = function() {scrollFunction()};
+window.onscroll = function() {scrollFunction()};
 
 function scrollFunction() {
   if (document.body.scrollTop > 500 || document.documentElement.scrollTop > 500) {
@@ -244,7 +244,7 @@ function scrollFunction() {
   } else {
     document.getElementById("mySidebar").style.top = "500px";
   }
-}*/
+}
 
 </script>
 </body>
