--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <div class="row">
   <div class="column">
     <div class="card">
-      <h3>Card 1</h3>
-      <p>Some text</p>
+          <img src="ChickenBiryani.jpg"></img>
+      <h3>Chicken Biryani</h3>
       <p>Some text</p>
     </div>
   </div>
