--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
   <div class="column">
     <div class="card">
-          <img src="ChickenBiryani.jpg"></img>
+          <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <h3>Chicken Biryani</h3>
       <p>Some text</p>
     </div>
@@ -63,7 +63,7 @@
 
   <div class="column">
     <div class="card">
-      <h3>Card 2</h3>
+     <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -71,7 +71,7 @@
   
   <div class="column">
     <div class="card">
-      <h3>Card 3</h3>
+      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -79,7 +79,7 @@
   
   <div class="column">
     <div class="card">
-      <h3>Card 4</h3>
+      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -88,7 +88,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <h3>Card 1</h3>
+      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -96,7 +96,7 @@
 
   <div class="column">
     <div class="card">
-      <h3>Card 2</h3>
+      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -104,7 +104,7 @@
   
   <div class="column">
     <div class="card">
-      <h3>Card 3</h3>
+     <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -112,7 +112,7 @@
   
   <div class="column">
     <div class="card">
-      <h3>Card 4</h3>
+    <img src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
