--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
  <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left"  id="mySidebar">
        
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
-  <div style="top:500px;"><a href="#" class="w3-bar-item w3-button">Veg</a>
+  <a href="#" class="w3-bar-item w3-button" style="top:500px;">Veg</a>
   <a href="#" class="w3-bar-item w3-button">Non-Veg</a>
   <a href="#" class="w3-bar-item w3-button">Punjabi</a>
         <a href="#" class="w3-bar-item w3-button">Chinese</a>
         <a href="#" class="w3-bar-item w3-button">Dessert</a>
         <a href="#" class="w3-bar-item w3-button">Italian</a>
-        <a href="#" class="w3-bar-item w3-button">Marathi</a></div>
+        <a href="#" class="w3-bar-item w3-button">Marathi</a>
        </div>
 
 
@@ -63,24 +63,24 @@
 
   <div class="column">
     <div class="card">
-     <img src="ChickenBiryani.jpg" width="150" height="150"></img>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
-      <p>Some text</p>
+     <img src="Egg.jpg" width="150" height="150"></img>
+        <h3>Egg Omelette</h3>
       <p>Some text</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
+      <img src="KadhaiPaneer.jpg" width="150" height="150"></img>
+      <h3>Kadhai Paneer</h3>
       <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <img src="Food.jpg" width="150" height="150"></img>
+     <h3>Noodels</h3>
       <p>Some text</p>
     </div>
   </div>
@@ -88,16 +88,16 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
-      <p>Some text</p>
+      <img src="GulabJamun.jpg" width="150" height="150"></img>
+      <h3>Gulab Jamun</h3>
       <p>Some text</p>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <img src="ChickenBiryani.jpg" width="150" height="150"></img>
-      <p>Some text</p>
+      <img src="Pancakes.jpeg" width="150" height="150"></img>
+      <h3>Pan Cakes</h3>
       <p>Some text</p>
     </div>
   </div>
