--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
   
   <div class="column">
     <div class="card">
-      <img src="KadhaiPaneer.jpg" width="150" height="150"></img>
-      <h3>Kadhai Paneer</h3>
+      <img src="KadaiPaneer.jpg" width="150" height="150"></img>
+      <h3>Kadai Paneer</h3>
       <p>Some text</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-      <img src="Food.jpg" width="150" height="150"></img>
+      <img src="food.jpg" width="150" height="150"></img>
      <h3>Noodels</h3>
       <p>Some text</p>
     </div>
