--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 <div class="choicemenu">
       <h2 class="title-text">*What would you like to have*</h2>
-        <a  href="#"><img class="responsive" id="choice" src="GulabJamun.jpg" height="260px" width="260px" ></img></a>
-        <a  href="#"><img  class="responsive" id="choice" src="KadaiPaneer.jpg" height="260px" width="260px"></img></a>
-        <a href="#"><img class="responsive" id="choice" src="Egg.jpg" height="260px" width="260px"></img></a>
+        <a  href="#"><img class="responsive choice" " src="GulabJamun.jpg" height="260px" width="260px" ></img></a>
+        <a  href="#"><img  class="responsive choice"  src="KadaiPaneer.jpg" height="260px" width="260px"></img></a>
+        <a href="#"><img class="responsive choice"  src="Egg.jpg" height="260px" width="260px"></img></a>
 </div>
 
 
@@ -55,7 +55,7 @@
       <div class="row">
   <div class="column">
     <div class="card">
-          <img src="ChickenBiryani.jpg" width="150" height="150"></img>
+          <img class="choice" src="ChickenBiryani.jpg" width="150" height="150"></img>
       <h3>Chicken Biryani</h3>
       <p>Some text</p>
     </div>
@@ -63,7 +63,7 @@
 
   <div class="column">
     <div class="card">
-     <img src="Egg.jpg" width="150" height="150"></img>
+     <img class="choice" src="Egg.jpg" width="150" height="150"></img>
         <h3>Egg Omelette</h3>
       <p>Some text</p>
     </div>
@@ -71,7 +71,7 @@
   
   <div class="column">
     <div class="card">
-      <img src="KadaiPaneer.jpg" width="150" height="150"></img>
+      <img class="choice" src="KadaiPaneer.jpg" width="150" height="150"></img>
       <h3>Kadai Paneer</h3>
       <p>Some text</p>
     </div>
@@ -79,7 +79,7 @@
   
   <div class="column">
     <div class="card">
-      <img src="food.jpg" width="150" height="150"></img>
+      <img class="choice"src="food.jpg" width="150" height="150"></img>
      <h3>Noodels</h3>
       <p>Some text</p>
     </div>
@@ -88,7 +88,7 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <img src="GulabJamun.jpg" width="150" height="150"></img>
+      <img class="choice"src="GulabJamun.jpg" width="150" height="150"></img>
       <h3>Gulab Jamun</h3>
       <p>Some text</p>
     </div>
@@ -96,7 +96,7 @@
 
   <div class="column">
     <div class="card">
-      <img src="Pancakes.jpeg" width="150" height="150"></img>
+      <img class="choice"src="Pancakes.jpeg" width="150" height="150"></img>
       <h3>Pan Cakes</h3>
       <p>Some text</p>
     </div>
@@ -104,7 +104,7 @@
   
   <div class="column">
     <div class="card">
-     <img src="ChickenBiryani.jpg" width="150" height="150"></img>
+     <img class="choice" src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
@@ -112,7 +112,7 @@
   
   <div class="column">
     <div class="card">
-    <img src="ChickenBiryani.jpg" width="150" height="150"></img>
+    <img class="choice" src="ChickenBiryani.jpg" width="150" height="150"></img>
       <p>Some text</p>
       <p>Some text</p>
     </div>
