--- a/index.html
+++ b/index.html
@@ -104,16 +104,16 @@
   
   <div class="column">
     <div class="card">
-     <img class="choice" src="ChickenBiryani.jpg" width="150" height="150"></img>
-      <p>Some text</p>
+     <img class="choice" src="ButterChicken.jpg" width="150" height="150"></img>
+      <h3>Butter Chicken</h3>
       <p>Some text</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-    <img class="choice" src="ChickenBiryani.jpg" width="150" height="150"></img>
-      <p>Some text</p>
+    <img class="choice" src="CholeBhature.jpg" width="150" height="150"></img>
+     <h3>Chole Bhature</h3>
       <p>Some text</p>
     </div>
   </div>
@@ -121,32 +121,32 @@
   <div class="row">
   <div class="column">
     <div class="card">
-      <h3>Card 1</h3>
-      <p>Some text</p>
+    <img class="choice" src="Dal.jpg" width="150" height="150"></img>
+     <h3>Toor Dal</h3>
       <p>Some text</p>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <h3>Card 2</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <h3>Card 3</h3>
-      <p>Some text</p>
+      <img class="choice" src="Dosa.jpg" width="150" height="150"></img>
+     <h3>Dosa</h3>
       <p>Some text</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-      <h3>Card 4</h3>
+     <img class="choice" src="Idali.jpg" width="150" height="150"></img>
+     <h3>Idali</h3>
       <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <img class="choice" src="MeduVada.jpg" width="150" height="150"></img>
+     <h3>Medu Vada</h3>
       <p>Some text</p>
     </div>
   </div>
@@ -154,32 +154,32 @@
 <div class="row">
   <div class="column">
     <div class="card">
-      <h3>Card 1</h3>
-      <p>Some text</p>
+      <img class="choice" src="Pulao.jpg" width="150" height="150"></img>
+     <h3>Pulao</h3>
       <p>Some text</p>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <h3>Card 2</h3>
-      <p>Some text</p>
-      <p>Some text</p>
-    </div>
-  </div>
-  
-  <div class="column">
-    <div class="card">
-      <h3>Card 3</h3>
-      <p>Some text</p>
+     <img class="choice" src="Samosa.jpg" width="150" height="150"></img>
+     <h3>Samosa</h3>
       <p>Some text</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-      <h3>Card 4</h3>
+      <img class="choice" src="VadaPao.jpg" width="150" height="150"></img>
+     <h3>VadaPao</h3>
       <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <img class="choice" src="PaniPuri.jpg" width="150" height="150"></img>
+     <h3>Pani Puri</h3>
       <p>Some text</p>
     </div>
   </div>
