--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   
   <div class="column">
     <div class="card">
-      <img class="choice" src="VadaPao.jpg" width="150" height="150"></img>
+      <img class="choice" src="VadaPav.jpg" width="150" height="150"></img>
      <h3>VadaPao</h3>
       <p>Some text</p>
     </div>
