--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <div>
   <div class="topnav" id="myTopnav" >
     
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
+      <a href="#contact">About</a>
+      <a href="#about">Cart</a>
       <a href="#home" class="active">Home</a>
      <button class="w3-button  w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
