--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="card">
      <img class="choice" src="Egg.jpg" width="170" height="150"></img>
         <h3>Egg Omelette</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -73,7 +73,7 @@
     <div class="card">
       <img class="choice" src="KadaiPaneer.jpg" width="170" height="150"></img>
       <h3>Kadai Paneer</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -81,7 +81,7 @@
     <div class="card">
       <img class="choice"src="food.jpg" width="170" height="150"></img>
      <h3>Noodels</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 </div>
@@ -90,7 +90,7 @@
     <div class="card">
       <img class="choice"src="GulabJamun.jpg" width="150" height="150"></img>
       <h3>Gulab Jamun</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 
@@ -98,7 +98,7 @@
     <div class="card">
       <img class="choice"src="Pancakes.jpeg" width="150" height="150"></img>
       <h3>Pan Cakes</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -106,7 +106,7 @@
     <div class="card">
      <img class="choice" src="ButterChicken.jpg" width="150" height="150"></img>
       <h3>Butter Chicken</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -114,7 +114,7 @@
     <div class="card">
     <img class="choice" src="CholeBhature.jpg" width="150" height="150"></img>
      <h3>Chole Bhature</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 </div>
@@ -123,7 +123,7 @@
     <div class="card">
     <img class="choice" src="Dal.jpg" width="150" height="150"></img>
      <h3>Toor Dal</h3>
-      <p>Some text</p>
+    <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 
@@ -131,7 +131,7 @@
     <div class="card">
       <img class="choice" src="Dosa.jpg" width="150" height="150"></img>
      <h3>Dosa</h3>
-      <p>Some text</p>
+     <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -139,7 +139,7 @@
     <div class="card">
      <img class="choice" src="Idali.jpg" width="150" height="150"></img>
      <h3>Idali</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -147,7 +147,7 @@
     <div class="card">
       <img class="choice" src="MeduVada.jpg" width="150" height="150"></img>
      <h3>Medu Vada</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 </div>
@@ -156,7 +156,7 @@
     <div class="card">
       <img class="choice" src="Pulao.jpg" width="150" height="150"></img>
      <h3>Pulao</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 
@@ -164,7 +164,7 @@
     <div class="card">
      <img class="choice" src="Samosa.jpg" width="150" height="150"></img>
      <h3>Samosa</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -172,7 +172,7 @@
     <div class="card">
       <img class="choice" src="VadaPav.jpg" width="150" height="150"></img>
      <h3>VadaPao</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
   
@@ -180,7 +180,7 @@
     <div class="card">
       <img class="choice" src="PaniPuri.jpg" width="150" height="150"></img>
      <h3>Pani Puri</h3>
-      <p>Some text</p>
+      <button class="cartbutton">Add to cart</button>
     </div>
   </div>
 </div>
