--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <div class="card">
           <img class="choice" src="ChickenBiryani.jpg" width="170" height="150"></img>
       <h3>Chicken Biryani</h3>
-              <a> <button class="cartbutton">Add to cart</button></a>
+              <a href="#"> <button class="cartbutton">Add to cart</button></a>
     </div>
   </div>
 
