--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
  <div class="w3-sidebar sidebar w3-bar-block w3-collapse w3-card w3-animate-left"  id="mySidebar">
        
   <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
-  <a href="#" class="w3-bar-item w3-button" style="top:500px;">Veg</a>
+              <a href="#" class="w3-bar-item w3-button"><h3>Filter</h3></a>
+  <a href="#" class="w3-bar-item w3-button">Veg</a>
   <a href="#" class="w3-bar-item w3-button">Non-Veg</a>
   <a href="#" class="w3-bar-item w3-button">Punjabi</a>
         <a href="#" class="w3-bar-item w3-button">Chinese</a>
