--- a/index.html
+++ b/index.html
@@ -187,6 +187,12 @@
 </div>
 </div>
 
+  <section id="social-icons">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram instagaram"></i></a>
+        <a href="#"><i class="fab fa-google-plus plus"></i></a>
+    </section>
 
 
 
