--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
       <a href="#contact">About</a>
       <a href="#about">Cart</a>
-      <a href="#home" class="active">Home</a>
+      <a href="https://sahilpote.github.io/Restaurant-web/#" class="active">Home</a>
      <button class="w3-button  w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
 </div>
