--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+      <title> ORDER</title>
 <link rel = "stylesheet" href = "index-style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
