--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div class="topnav" id="myTopnav" >
     
       <a href="#contact">About</a>
-      <a href="#about">Cart</a>
+      <a href="cart.html">Cart</a>
       <a href="https://sahilpote.github.io/Restaurant-web/#" class="active">Home</a>
      <button class="w3-button  w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
   </div>
