--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <head>
       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title> ORDER</title>
+      <title> CART</title>
 <link rel = "stylesheet" href = "E:\SEM 3\MiniProject\index-style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
