--- a/cart.html
+++ b/cart.html
@@ -66,6 +66,12 @@
     </div>
 </div>
 </section>
+       <section id="social-icons">
+        <a href="#"><i class="fab fa-facebook"></i></a>
+        <a href="#"><i class="fab fa-twitter twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram instagaram"></i></a>
+        <a href="#"><i class="fab fa-google-plus plus"></i></a>
+    </section>
 
 </body>
 </html>
