--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,8 @@
       <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title> CART</title>
+       <link rel = "icon" href ="1.png"type = "image/x-icon">
+       
 <link rel = "stylesheet" href = "index-style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
